--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -1,35 +1,28 @@
-body {
+* {
   font-family: var(--primary-font);
+  font-size: 14px;
   margin: 0;
   line-height: 1.25;
+  padding: 0;
+}
+
+body {
+  color: var(--primary-text-color);
 }
 
 ul {
   list-style: none;
-  padding: 0;
-  margin: 0;
 }
 
 a {
+  color: var(--primary-text-color);
   text-decoration: none;
   display: block;
 }
 
 img {
   display: block;
-
   height: auto;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .container {
@@ -57,9 +50,28 @@ p {
 // }
 
 .section-title {
-  text-transform: uppercase;
-  font-size: 40px;
   font-family: var(--title-font);
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 32px;
+  margin: 0 0 60px 0;
+}
+
+.section-title--gradient {
+  background: -webkit-linear-gradient(#333d5e, #4aa7f0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.section-subtitle {
+  font-size: 16px;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+  font-weight: 500;
+}
+
+.services-content__button {
+  margin-top: 20px;
 }
 
 .menu-arrow {
@@ -73,18 +85,20 @@ p {
   border-left: 4px solid transparent;
 }
 
+.menu-arrow--big {
+  border-top: 6px dashed;
+  border-top: 6px solid\9;
+  border-right: 6px solid rgba(0, 0, 0, 0);
+  border-left: 6px solid rgba(0, 0, 0, 0);
+}
+
+.menu-arrow--right {
+  transform: rotate(-90deg);
+}
+
 .text--lightblue {
   font-weight: 600;
   color: var(--light-blue-text);
-}
-
-.section-title {
-  font-family: var(--title-font);
-  font-size: 36px;
-  background: -webkit-linear-gradient(#333d5e, #4aa7f0);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin: 60px 0;
 }
 
 // .btn-grad {
@@ -113,22 +127,147 @@ p {
 //   text-decoration: none;
 // }
 
-.btn-grad {
-  font-size: 14px;
-  text-align: center;
-  padding: 10px 20px;
+.dropdown__button {
+  color: var(--secondary-text-color);
   text-transform: uppercase;
+  font-weight: 500;
+  padding: 15px 5px;
+  align-items: center;
+  display: flex;
+  transition: color var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.button {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 10px 20px;
   border-radius: 10px;
-  background-color: #144da4;
   white-space: nowrap;
-  color: #fff;
-  text-decoration: none;
-  transition: background-color 0.5s;
-  place-content: center;
+  cursor: pointer;
+  transition: color var(--timing-function),
+    background-color var(--timing-function), background var(--timing-function);
+}
+
+// .button--white {
+//   color: var(--accent-color);
+//   background-color: var(--primary-background-color);
+
+//   &:hover {
+//     color: var(--secondary-text-color);
+//     background-color: transparent;
+//   }
+// }
+
+.button--transparent {
+  color: var(--secondary-text-color);
+  background-color: transparent;
+  border: 1px solid var(--primary-background-color);
+  transition: border var(--timing-function),
+    background-color var(--timing-function), color var(--timing-function);
+
+  &:hover {
+    color: var(--accent-color);
+    background-color: var(--primary-background-color);
+  }
+}
+
+.button--sm {
+  padding: 5px 20px;
+}
+
+.button--white {
+  color: var(--primary-text-color);
+  background-color: var(--primary-background-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    // background-color: var(--light-blue-text);
+    border-color: var(--light-blue-text);
+  }
+}
+
+.btn-grad {
+  background: linear-gradient(0deg, #144da4, transparent) #144da4;
+  color: var(--secondary-text-color);
 }
 .btn-grad:hover,
 .btn-grad:focus {
-  background: linear-gradient(180deg, #144da4, transparent) #4aa7f0;
+  background: linear-gradient(0deg, #144da4, transparent) #4aa7f0;
+}
 
-  color: #fff;
+.dropdown__menu {
+  z-index: 1;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  background-color: var(--secondary-text-color);
+
+  padding: 0;
+}
+
+.dropdown--mt14 {
+  margin-top: 14px;
+}
+
+.dropdown__link {
+  text-transform: uppercase;
+  white-space: nowrap;
+  padding: 10px 15px;
+  transition: background-color var(--timing-function);
+
+  &:hover,
+  &:focus {
+    background-color: var(--light-blue-text);
+  }
+}
+
+.dropdown__button--open + .dropdown__menu {
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .dropdown__link {
+    color: var(--secondary-text-color);
+    transition: color var(--timing-function),
+      background-color var(--timing-function);
+
+    &:hover {
+      color: var(--primary-text-color);
+    }
+  }
+
+  //   .dropdown__link:hover {
+  //     color: var(--primary-text-color);
+  //   }
+  // }
+
+  .dropdown__button--open ~ .dropdown__menu {
+    max-height: 25rem;
+  }
+
+  .dropdown__button {
+    padding-left: 0;
+    padding-right: 0;
+
+    width: 100%;
+    justify-content: space-between;
+    // border-bottom: 0.5px solid currentColor;
+  }
+
+  .dropdown__menu {
+    background-color: rgba(168, 213, 248, 0.1);
+    display: block;
+    position: relative;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height var(--timing-function);
+  }
 }
