--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -16,7 +16,6 @@
   color: var(--secondary-text-color);
   min-width: 45%;
   font-weight: 500;
-  font-size: 18px;
   margin-bottom: 20px;
 }
 
@@ -39,17 +38,15 @@
 }
 
 .footer__subtitle {
-  font-family: var(--title-font);
+  font-weight: 800;
   color: var(--secondary-text-color);
-  font-size: 14px;
-  text-transform: uppercase;
 }
 
 .footer-nav__link {
   color: var(--secondary-text-color);
   font-weight: 500;
-  font-size: 14px;
-  transition: color 300ms var(--timing-function);
+
+  transition: color var(--timing-function);
   text-transform: uppercase;
 
   &:hover {
@@ -62,7 +59,6 @@
   font-style: normal;
   margin-bottom: 20px;
   font-weight: 500;
-  font-size: 14px;
 }
 
 .footer-contacts__link {
@@ -70,14 +66,13 @@
   font-style: normal;
 
   font-weight: 500;
-  font-size: 18px;
 }
 
 .footer-contacts__phone {
   font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
-  font-size: 14px;
+
   text-transform: uppercase;
 }
 
@@ -85,7 +80,6 @@
   font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
-  font-size: 14px;
 }
 
 .footer-social__list {
@@ -108,17 +102,13 @@
   margin-top: 30px;
 }
 
-.footer-payment__subtitle {
-  font-size: 14px;
-}
-
 .footer-payment__link {
   width: 60px;
   height: 40px;
   background-color: var(--primary-background-color);
   display: flex;
   align-items: center;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .footer-payment__img {
