--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -22,8 +22,8 @@
   --secondary-background-color: #191f32;
 
   --opacity-text-color: rgba(255, 255, 255, 0.6);
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   /* --card-set-gap: 30px; */
 
-  /* --timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+  --timing-function: 300ms cubic-bezier(0.2, 0, 0.7, 1);
 }
