--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -1,23 +1,34 @@
 .faq {
   position: relative;
+  padding-bottom: 120px;
 }
 
-// .faq-background {
-//   background-image: url(/images/faq-bcg.svg);
-//   background-repeat: no-repeat;
-//   width: 100%;
-//   height: 100%;
-//   position: absolute;
-//   bottom: 0px;
-// }
+.faq__background {
+  background-image: url(../images/faq-bcg.svg);
+  background-size: 60vw;
+  background-repeat: no-repeat;
+  background-position: top right;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  position: absolute;
+  pointer-events: none;
+}
 
 .accordion {
   width: 50%;
+  position: relative;
 }
 
 .accordion__item {
   border-bottom: 1px solid var(--grey-text-color);
   margin-top: 10px;
+
+  &:hover .section-subtitle {
+    color: var(--accent-color);
+  }
 }
 
 .accordion__btn {
@@ -28,22 +39,27 @@
   display: flex;
   align-items: center;
   padding: 10px 0;
+  transition: color var(--timing-function), transform var(--timing-function);
 
-  &:focus + .accordion__info {
-    max-height: 2rem;
+  &:focus .accordion__title {
+    color: var(--accent-color);
   }
 
-  &:focus > .accordion__arrow {
-    transform: rotate(90deg);
+  &:focus + .accordion__info {
+    max-height: 4rem;
+  }
+
+  &:focus .menu-arrow--right {
+    transform: rotate(0deg);
   }
 }
 
 .accordion__title {
-  color: var(--primary-text-color);
-  font-family: var(--title-font);
-  white-space: nowrap;
-  font-size: 18px;
-  text-transform: uppercase;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: color var(--timing-function);
 }
 
 .accordion__info {
@@ -51,17 +67,17 @@
   max-height: 0rem;
   overflow: hidden;
   font-weight: 500;
-  font-size: 14px;
+
   line-height: 1.25;
   margin-bottom: 10px;
-  transition: max-height 300ms var(--timing-function);
+  transition: max-height var(--timing-function);
 }
 
-.accordion__arrow {
-  fill: currentColor;
-  transform: rotate(0deg);
-  transition: transform 300ms var(--timing-function);
-}
+// .accordion__arrow {
+//   fill: currentColor;
+//   transform: rotate(0deg);
+//   transition: transform var(--timing-function);
+// }
 
 .accordion__svg {
   fill: currentColor;
