--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -22,13 +22,13 @@
 }
 
 .topbar-quality__link {
-  font-size: 14px;
   color: var(--secondary-text-color);
   position: relative;
   white-space: nowrap;
   text-decoration: underline;
   display: flex;
   align-items: center;
+  transition: color var(--timing-function);
 
   &:hover,
   &:focus {
@@ -42,10 +42,12 @@
 
 .topbar-quality__svg {
   fill: transparent;
+  transform: scale(0.8);
 }
 
 .planet-icon {
   fill: currentColor;
+  transform: scale(0.8);
 }
 
 .big-arrow {
@@ -59,58 +61,27 @@
   width: 50%;
 }
 
-.dropdown__button {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 15px 5px;
-  align-items: center;
-  display: flex;
-  transition: color 300ms var(--timing-function);
+// .topbar__button {
+//   color: var(--secondary-text-color);
+//   background-color: transparent;
+//   text-transform: uppercase;
+//   border: 1px solid var(--secondary-text-color);
+//   border-radius: 10px;
+//   padding: 6px 16px;
+//   display: flex;
+//   align-items: center;
+//   white-space: nowrap;
+//   cursor: pointer;
+//   transition: background-color var(--timing-function),
+//     color var(--timing-function), border-color var(--timing-function);
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
+//   &:hover {
+//     color: var(--secondary-background-color);
+//     background-color: var(--primary-background-color);
+//   }
+// }
 
-.topbar__button {
-  font-family: var(--primary-font);
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
-  background-color: var(--secondary-background-color);
-  color: var(--secondary-text-color);
-  border: 1px solid var(--secondary-text-color);
-  border-radius: 8px;
-  padding: 6px 16px;
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-  cursor: pointer;
-  transition: background-color 300ms var(--timing-function),
-    color 300ms var(--timing-function);
-
-  &:hover {
-    color: var(--secondary-background-color);
-    background-color: var(--primary-background-color);
-  }
-}
-
-.topbar__button--white {
-  background-color: var(--primary-background-color);
-  color: var(--primary-text-color);
-
-  &:hover,
-  &:focus {
-    // color: var(--secondary-text-color);
-    background-color: var(--light-blue-text);
-    border-color: var(--light-blue-text);
-  }
-}
-
-.button-lang {
+.button--lang {
   padding: 0;
   border: none;
   display: flex;
@@ -124,7 +95,7 @@
   }
 }
 
-.button-lang__list {
+.dropdown__menu--lang {
   width: 100%;
   margin-top: 10px;
 }
@@ -149,61 +120,19 @@
 
 .vsys-logo {
   font-family: var(--logo-font);
-  text-transform: uppercase;
-  color: #ffffff;
   font-size: 16px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: var(--secondary-text-color);
+
   position: relative;
   white-space: nowrap;
 }
 
-.navbar-dropdown {
-  z-index: 1;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  display: none;
-  background-color: var(--secondary-text-color);
-  color: var(--primary-text-color);
-
-  padding: 0;
-}
-
-.dropdown--mt14 {
-  margin-top: 14px;
-}
-
-.dropdown__link {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: var(--primary-text-color);
-  white-space: nowrap;
-  padding: 10px 15px;
-  transition: background-color 300ms var(--timing-function);
-
-  &:hover,
-  &:focus {
-    background-color: var(--light-blue-text);
-  }
-}
-
-.dropdown__button--open + .navbar-dropdown {
-  display: block;
-}
-
-.vsys-logo--christmas-hat {
-  &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: -14px;
-    top: -25px;
-    width: 50px;
-    height: 54px;
-    // background-image: url(/images/for-sprite-delete/christmas-hat.svg);
-  }
-}
-
 .vsys-logo__virtual {
+  font-size: 16px;
+  font-weight: 900;
+  font-family: var(--logo-font);
   color: #4aa7f0;
 }
 
@@ -292,8 +221,7 @@
     z-index: 1;
     opacity: 0;
     // transform: translateY(-100%);
-    transition: transform 250ms var(--timing-function),
-      opacity 250ms var(--timing-function);
+    transition: transform var(--timing-function), opacity var(--timing-function);
     pointer-events: none;
 
     &.is-open {
@@ -317,43 +245,6 @@
 
     .navbar__item {
       width: 50%;
-    }
-
-    .navbar-dropdown {
-      background-color: rgba(168, 213, 248, 0.1);
-      display: block;
-      position: relative;
-      overflow: hidden;
-      max-height: 0;
-      transition: max-height 300ms var(--timing-function);
-    }
-
-    .dropdown__link {
-      color: var(--secondary-text-color);
-      transition: color 300ms var(--timing-function),
-        background-color 300ms var(--timing-function);
-
-      &:hover {
-        color: var(--primary-text-color);
-      }
-    }
-
-    //   .dropdown__link:hover {
-    //     color: var(--primary-text-color);
-    //   }
-    // }
-
-    .dropdown__button--open ~ .navbar-dropdown {
-      max-height: 25rem;
-    }
-
-    .dropdown__button {
-      padding-left: 0;
-      padding-right: 0;
-
-      width: 100%;
-      justify-content: space-between;
-      // border-bottom: 0.5px solid currentColor;
     }
   }
 }
