--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -31,6 +31,7 @@
 
 .hero__title {
   font-family: var(--title-font);
+  font-weight: 900;
   font-size: 40px;
   line-height: 1.3;
   width: 100%;
@@ -53,7 +54,7 @@
 
 .hero__description {
   color: var(--secondary-text-color);
-  font-size: 20px;
+  font-size: 18px;
   margin-bottom: 20px;
 }
 
@@ -72,42 +73,6 @@
   min-width: fit-content;
 }
 
-.hero__button {
-  font-family: var(--buttons-font);
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  font-size: 15px;
-  font-weight: 500;
-  padding: 15px 20px;
-  border-radius: 10px;
-  white-space: nowrap;
-  cursor: pointer;
-}
-
-.hero__button--white {
-  color: var(--accent-color);
-  background-color: var(--primary-background-color);
-
-  &:hover {
-    color: var(--secondary-text-color);
-    background-color: transparent;
-  }
-}
-
-.hero__button--blue {
-  color: var(--secondary-text-color);
-  background-color: transparent;
-  border: 1px solid var(--primary-background-color);
-  transition: border 300ms var(--timing-function),
-    background-color 300ms var(--timing-function),
-    color 300ms var(--timing-function);
-
-  &:hover {
-    color: var(--accent-color);
-    background-color: var(--primary-background-color);
-  }
-}
-
 .slider__viewbox {
   overflow: hidden;
 }
@@ -115,7 +80,7 @@
 .slider-content {
   display: flex;
   flex-wrap: nowrap;
-  transition: transform 300ms var(--timing-function);
+  transition: transform var(--timing-function);
 }
 
 .slider__container {
