--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ img {
   font-size: 16px;
   text-transform: uppercase;
   color: var(--primary-text-color);
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .services-content__button {
@@ -206,6 +206,7 @@ img {
     justify-content: space-between;
   }
   .dropdown__menu {
+    width: 100%;
     background-color: rgba(168, 213, 248, 0.1);
     display: block;
     position: relative;
@@ -265,6 +266,7 @@ img {
   display: flex;
   align-items: center;
   transition: color var(--timing-function);
+  margin-left: -10px;
 }
 .topbar-quality__link:hover, .topbar-quality__link:focus {
   color: var(--light-blue-text);
@@ -441,15 +443,10 @@ img {
   .mobile-menu .navbar__list {
     flex-flow: column;
   }
-  .mobile-menu .navbar__item {
-    width: 50%;
-  }
 }
 .hero {
   position: relative;
   background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
-}
-.hero .section {
   padding-top: 40px;
   padding-bottom: 200px;
 }
@@ -590,6 +587,10 @@ input[type=radio] {
   margin: 0;
 }
 
+.services {
+  padding-bottom: 80px;
+}
+
 .services-label__box {
   display: flex;
   gap: 80px;
@@ -602,7 +603,6 @@ input[type=radio] {
 
 .services__container {
   padding-top: 60px;
-  padding-bottom: 120px;
   position: relative;
 }
 
@@ -761,6 +761,9 @@ input[type=radio] {
 }
 
 @media screen and (max-width: 1199px) {
+  .services-menu {
+    gap: 0;
+  }
   .services-cards__list {
     flex-wrap: wrap;
     justify-content: space-around;
@@ -771,6 +774,9 @@ input[type=radio] {
   }
 }
 @media screen and (max-width: 767px) {
+  .services-menu__item .menu-arrow--big {
+    display: none;
+  }
   .services-dedicated__item {
     width: 100%;
   }
@@ -784,6 +790,7 @@ input[type=radio] {
 .faq {
   position: relative;
   padding-bottom: 120px;
+  padding-top: 80px;
 }
 
 .faq__background {
@@ -898,7 +905,9 @@ input[type=radio] {
 }
 
 .footer__subtitle {
-  font-weight: 800;
+  font-family: var(--title-font);
+  font-style: 14px;
+  font-weight: 700;
   color: var(--secondary-text-color);
 }
 
@@ -926,14 +935,12 @@ input[type=radio] {
 }
 
 .footer-contacts__phone {
-  font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
   text-transform: uppercase;
 }
 
 .footer-contacts__mail {
-  font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
 }
@@ -942,6 +949,32 @@ input[type=radio] {
   min-width: 25%;
   display: flex;
   justify-content: space-between;
+}
+
+.footer-social__link {
+  color: var(--secondary-text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  transition: color var(--timing-function), background-color var(--timing-function);
+}
+.footer-social__link:hover {
+  color: var(--accent-color);
+  background-color: transparent;
+}
+
+.footer-social__svg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-social__svg--color {
+  fill: currentColor;
 }
 
 .footer-payment {
@@ -1009,4 +1042,34 @@ input[type=radio] {
   .footer-social__list {
     width: 50%;
   }
+}
+.availability {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.availability-section {
+  display: flex;
+  justify-content: space-between;
+}
+
+.availability-section__list {
+  display: flex;
+}
+
+.availability-section__info {
+  width: 75%;
+}
+
+.availability-section .section-subtitle {
+  margin-bottom: 40px;
+}
+
+.availability-section__subtitle {
+  font-family: var(--title-font);
+  font-size: 16px;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  margin-bottom: 20px;
+  font-weight: 700;
 }/*# sourceMappingURL=main.css.map */
