--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -21,6 +21,10 @@ input[type="radio"] {
   margin: 0;
 }
 
+.services {
+  padding-bottom: 80px;
+}
+
 .services-label__box {
   display: flex;
   gap: 80px;
@@ -33,7 +37,7 @@ input[type="radio"] {
 
 .services__container {
   padding-top: 60px;
-  padding-bottom: 120px;
+
   position: relative;
 }
 
@@ -234,6 +238,10 @@ input[type="radio"] {
 }
 
 @media screen and (max-width: 1199px) {
+  .services-menu {
+    gap: 0;
+  }
+
   .services-cards__list {
     flex-wrap: wrap;
     justify-content: space-around;
@@ -249,6 +257,10 @@ input[type="radio"] {
 }
 
 @media screen and (max-width: 767px) {
+  .services-menu__item .menu-arrow--big {
+    display: none;
+  }
+
   .services-dedicated__item {
     width: 100%;
   }
