--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -45,10 +45,6 @@ img {
   }
 }
 
-// .section {
-//   padding: 60px 0;
-// }
-
 .section-title {
   font-family: var(--title-font);
   text-transform: uppercase;
@@ -67,7 +63,7 @@ img {
   font-size: 16px;
   text-transform: uppercase;
   color: var(--primary-text-color);
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .services-content__button {
@@ -265,6 +261,7 @@ img {
   }
 
   .dropdown__menu {
+    width: 100%;
     background-color: rgba(168, 213, 248, 0.1);
     display: block;
     position: relative;
