--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -38,7 +38,10 @@
 }
 
 .footer__subtitle {
-  font-weight: 800;
+  font-family: var(--title-font);
+  font-style: 14px;
+  font-weight: 700;
+  // font-weight: 800;
   color: var(--secondary-text-color);
 }
 
@@ -69,7 +72,6 @@
 }
 
 .footer-contacts__phone {
-  font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
 
@@ -77,7 +79,6 @@
 }
 
 .footer-contacts__mail {
-  font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
 }
@@ -86,6 +87,34 @@
   min-width: 25%;
   display: flex;
   justify-content: space-between;
+}
+
+.footer-social__link {
+  color: var(--secondary-text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  transition: color var(--timing-function),
+    background-color var(--timing-function);
+
+  &:hover {
+    color: var(--accent-color);
+    background-color: transparent;
+  }
+}
+
+.footer-social__svg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-social__svg--color {
+  fill: currentColor;
 }
 
 .footer-payment {
